--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Temas</h2>
+                    <br>
+                    <h2>Participantes</h2>
                     <hr class="star-primary">
                 </div>
             </div>
