--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
     
         <!-- Mesas -->
-    <section id="mesas">
+    <section id="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
