--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Programa</h2>
+                    <h2>Participantes</h2>
                     <hr class="star-primary">
                 </div>
             </div> 
@@ -83,8 +83,18 @@
                     <p></p>
                 </div>
                 <p>Círculo Mexicano de Estudios Coreanos</p>
+                <br>
                 <p>Es una iniciativa académica de entusiastas jóvenes investigadores de distintas disciplinas. Se formó con el objetivo general de alentar y difundir la producción intelectual, crítica y académica de estudios coreanos en México; buscando siempre la objetividad, horizontalidad y honestidad del conocimiento.</p>
-
+                <br>
+                <p>Aunque la edad del Círculo es corta, pues este se fundó en 2015, la participación en diversos eventos ha sido activa:</p>
+                <br>
+                <p>Enero 2016.  El CMEC participó en una mesa sobre historia y sociedad de la península coreana, que tuvo lugar en el Museo Nacional de las Culturas.</p>
+                <br>
+                <p>El Coloquio México-Corea: miradas multidisciplinarias fue el primer evento oficial del Circulo Mexicano de Estudios Coreanos, estuvo co-organizado por el Posgrado de Antropología Social de la ENAH-INAH.</p>
+                <br>
+                <p>El CMEC impartió una conferencia en el marco de la Semana de Asia de la FES Aragón, el 11 de mayo de 2016.</p>
+                <br>
+                
             </div>
         </div>
     </section>
