--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 <div class="col-lg-12">
                     <p></p>
                 </div>
-                <p>Círculo Mexicano de Estudios Coreanos</p>
-                <br>
+                <p><center>Círculo Mexicano de Estudios Coreanos</center></p>
                 <p>Es una iniciativa académica de entusiastas jóvenes investigadores de distintas disciplinas. Se formó con el objetivo general de alentar y difundir la producción intelectual, crítica y académica de estudios coreanos en México; buscando siempre la objetividad, horizontalidad y honestidad del conocimiento.</p>
                 <p>Aunque la edad del Círculo es corta, pues este se fundó en 2015, la participación en diversos eventos ha sido activa:</p>
                 <p>En enero de 2016, el CMEC participó en una mesa sobre historia y sociedad de la península coreana, que tuvo lugar en el Museo Nacional de las Culturas.</p>
@@ -91,7 +90,7 @@
                 <p>El CMEC impartió una conferencia en el marco de la Semana de Asia de la FES Aragón, el 11 de mayo de 2016.</p>
                 <br>
                 <br>
-                <p>Jorge Rodríguez</p>
+                <p><center>Jorge Rodríguez</center></p>
                 <p>Originario de Tampico, Tamaulipas, es egresado de la Licenciatura en Composición de la Facultad de Música de la UNAM, bajo la dirección del Dr. Manuel Rocha Iturbide.</p>
                 <p>Desde 2008 es miembro de Kasou Kai, asociación dedicada a la difusión de la música japonesa en México y Latinoamérica, dirigida por la maestra Nishimura Yoshiko y bajo cuya dirección recibió el primer grado en el estudio del koto en 2010.</p>
                 <p>A partir de 2012 es miembro de la asociación Kikôkai, dirigida por el maestro Isaka Toshiyuki, bajo cuya instrucción recibió en 2013 el primer grado en el estudio de shamisen y música folklórica japonesa, y con quien realizó diversas giras por Japón, incluyendo presentaciones para la televisión nacional japonesa (NHK).</p>
@@ -99,7 +98,7 @@
                 <p>La música de concierto de Jorge Rodríguez se ha programado en diversos foros de la Ciudad de México, y dentro de festivales en Estados Unidos y Francia.</p>
                 <p>En 2013 concluyó una estancia de estudios en Japón, donde centró su investigación en las formas de transmisión en la música japonesa.</p>
                 <p>Desde 2014 coordina el área de actividades culturales de la Fundación Japón en México.</p>
-                
+                <br>
             </div>
         </div>
     </section>
