--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Coloquio de estudios asiáticos</a>
+                <a class="navbar-brand" href="http://asiaticos.github.io/#page-top">Coloquio de estudios asiáticos</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +51,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Temas</a>
+                        <a href="http://asiaticos.github.io/#portfolio">Temas</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Acerca</a>
+                        <a href="http://asiaticos.github.io/#about">Acerca</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#mesas">Programa</a>
+                        <a href="http://asiaticos.github.io/#mesas">Programa</a>
                     </li>
                     <!--<li class="page-scroll">
                         <a href="#contact">Contacto</a>
