--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="http://asiaticos.github.io/#page-top">Coloquio de estudios asiáticos</a>
+                <a class="navbar-brand" href="http://asiaticos.github.io/">Coloquio de estudios asiáticos</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,10 +51,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://asiaticos.github.io/#portfolio">Temas</a>
+                        <a href="http://asiaticos.github.io/">Temas</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://asiaticos.github.io/#about">Acerca</a>
+                        <a href="http://asiaticos.github.io/">Acerca</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://asiaticos.github.io/#mesas">Programa</a>
