--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="http://asiaticos.github.io/">Coloquio de estudios asiáticos</a>
+                <a class="navbar-brand" href="http://asiaticos.github.io/coloquio/">Coloquio de estudios asiáticos</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,10 +51,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://asiaticos.github.io/">Temas</a>
+                        <a href="http://asiaticos.github.io/coloquio/#portfolio">Temas</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://asiaticos.github.io/">Acerca</a>
+                        <a href="http://asiaticos.github.io/coloquio/#about">Acerca</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://asiaticos.github.io/coloquio/#mesas">Programa</a> 
@@ -160,145 +160,6 @@
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
-    </div>
-
-    <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Corea</h2>
-                            <hr class="star-primary">
-                            <p>Experiencias de estudiantes coreanos de intercambio en la CDMX. Valeria Cruz.</p>
-                            <p>K-Pop: Contacto intercultural. Anahí, Chandel.</p>
-                            <p>México-Coreas: Un camino de sabores. Sandra.</p>
-                            <p>Coreanidades: Identidades diversas, diversas identidades. CMEC.</p>
-                            <p>La enseñanza del coreano como idioma extranjero en México. Lee SangMee.</p>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Japón</h2>
-                            <hr class="star-primary">
-                            <p>El budismo zen como modelo de desarrollo humano. Jorge Castillo.</p>
-                            <p>Anime: imagen y representación. Análisis del samurai en Rurouni Kenshin. Marialicia.</p>
-                            <p>Japón después de ser el número uno. Del alto crecimiento al ràpido envejecimiento. Carlos.</p>
-                            <p>Primeros contactos entre México y Japón. Liliana.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>China</h2>
-                            <hr class="star-primary">
-                            <p>El papel de la comunidad china en la constitución del Estado Nación mexicano. Jenn.</p>
-                            <p>Etnicidades y autonomias en la Republica Popular China. Natividad.</p>
-                            <p>Representaciones de la alteridad en China durante la dinastía Qing. Ivonne.</p>
-                            <p>Introducción a las culturas del Este de Asia: China, Corea, Japón. Silvia.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Afganistán</h2>
-                            <hr class="star-primary">
-                            <p>Afganistán: la invasión norteamericana como la llegada de lo moderno. Monse.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Myanmar</h2>
-                            <hr class="star-primary">
-                            <p>DDHH en Myanmar. Balam.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Tibet</h2>
-                            <hr class="star-primary">
-                            <p>Tibet</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- jQuery -->
