--- a/index.html
+++ b/index.html
@@ -82,15 +82,20 @@
                 <div class="col-lg-12">
                     <p></p>
                 </div>
-                <h2>Círculo Mexicano de Estudios Coreanos</h2>
+                <h4>Círculo Mexicano de Estudios Coreanos (CMEC)</h4>
                 <p>Es una iniciativa académica de entusiastas jóvenes investigadores de distintas disciplinas. Se formó con el objetivo general de alentar y difundir la producción intelectual, crítica y académica de estudios coreanos en México; buscando siempre la objetividad, horizontalidad y honestidad del conocimiento.</p>
                 <p>Aunque la edad del Círculo es corta, pues este se fundó en 2015, la participación en diversos eventos ha sido activa:</p>
                 <p>En enero de 2016, el CMEC participó en una mesa sobre historia y sociedad de la península coreana, que tuvo lugar en el Museo Nacional de las Culturas.</p>
                 <p>El Coloquio México-Corea: miradas multidisciplinarias fue el primer evento oficial del Circulo Mexicano de Estudios Coreanos, estuvo co-organizado por el Posgrado de Antropología Social de la ENAH-INAH.</p>
                 <p>El CMEC impartió una conferencia en el marco de la Semana de Asia de la FES Aragón, el 11 de mayo de 2016.</p>
                 <br>
+                <h5>Jorge Raúl Suárez Campero</h5>
+                <p>Egresado en Relaciones Internacionales por la Facultad de Ciencias Políticas y Sociales de la UNAM. Asistió a Dankook University en Corea del Sur como becario internacional en el semestre de otoño de 2012. Participó en el Verano de la Investigación Científica de la Academia Mexicana de Ciencias, realizando una estancia de investigación en el Centro de Estudios de Asia y África del Colegio de México. Cursó el Diplomado en Estudios sobre Asia del Seminario Universitario de Estudios Asiáticos de la UNAM. Ha ejercido como profesor adjunto en su institución de origen desde 2013 a la fecha. Ha sido ponente en algunos foros académicos concernientes al continente Asiático. Su área de interés es la política y cultura de la península Coreana.</p>
                 <br>
-                <h4>Jorge Rodríguez</h4>
+                <h5>Lic. Sergio Gallardo García</h5>
+                <p>Estudiante de maestría en Antropología Social en el Centro de Investigaciones y Estudios Superiores en Antropología Social (CIESAS-DF). Licenciado en sociología por la Facultad de Ciencias Políticas y Sociales de la UNAM. Sus principales temas de investigación son experiencias migratorias en contextos urbanos, inmigración, configuración de ciudades globales, experiencias de extranjeros en la ciudad de México. Ha sido coordinador del área de Investigación del Colectivo Migrantes LGBT. Se ha especializado en el estudio de la comunidad coreana en la ciudad de México, contando con algunas publicaciones: Inmigración coreana en la ciudad de México: ¿conformación de un barrio inmigrante? (2013), Los coreanos en México: Un estudio de integración de la comunidad coreana en la zona rosa de la ciudad de México (2015).</p>
+                <br>
+                <h4>Lic. Jorge Rodríguez (FJMEX)</h4>
                 <p>Originario de Tampico, Tamaulipas, es egresado de la Licenciatura en Composición de la Facultad de Música de la UNAM, bajo la dirección del Dr. Manuel Rocha Iturbide.</p>
                 <p>Desde 2008 es miembro de Kasou Kai, asociación dedicada a la difusión de la música japonesa en México y Latinoamérica, dirigida por la maestra Nishimura Yoshiko y bajo cuya dirección recibió el primer grado en el estudio del koto en 2010.</p>
                 <p>A partir de 2012 es miembro de la asociación Kikôkai, dirigida por el maestro Isaka Toshiyuki, bajo cuya instrucción recibió en 2013 el primer grado en el estudio de shamisen y música folklórica japonesa, y con quien realizó diversas giras por Japón, incluyendo presentaciones para la televisión nacional japonesa (NHK).</p>
