--- a/index.html
+++ b/index.html
@@ -101,12 +101,7 @@
                 <br>
                 <h4>Lic. Jorge Rodríguez (FJMEX)</h4>
                 <p>Originario de Tampico, Tamaulipas, es egresado de la Licenciatura en Composición de la Facultad de Música de la UNAM, bajo la dirección del Dr. Manuel Rocha Iturbide.</p>
-                <p>Desde 2008 es miembro de Kasou Kai, asociación dedicada a la difusión de la música japonesa en México y Latinoamérica, dirigida por la maestra Nishimura Yoshiko y bajo cuya dirección recibió el primer grado en el estudio del koto en 2010.</p>
-                <p>A partir de 2012 es miembro de la asociación Kikôkai, dirigida por el maestro Isaka Toshiyuki, bajo cuya instrucción recibió en 2013 el primer grado en el estudio de shamisen y música folklórica japonesa, y con quien realizó diversas giras por Japón, incluyendo presentaciones para la televisión nacional japonesa (NHK).</p>
-                <p>Fue el ganador del proyecto Regards croisés, organizado en 2012 por la compañía francesa Ensemble Justiniana.</p>
-                <p>La música de concierto de Jorge Rodríguez se ha programado en diversos foros de la Ciudad de México, y dentro de festivales en Estados Unidos y Francia.</p>
-                <p>En 2013 concluyó una estancia de estudios en Japón, donde centró su investigación en las formas de transmisión en la música japonesa.</p>
-                <p>Desde 2014 coordina el área de actividades culturales de la Fundación Japón en México.</p>
+                <p>Desde 2008 es miembro de Kasou Kai, asociación dedicada a la difusión de la música japonesa en México y Latinoamérica, dirigida por la maestra Nishimura Yoshiko y bajo cuya dirección recibió el primer grado en el estudio del koto en 2010. A partir de 2012 es miembro de la asociación Kikôkai, dirigida por el maestro Isaka Toshiyuki, bajo cuya instrucción recibió en 2013 el primer grado en el estudio de shamisen y música folklórica japonesa, y con quien realizó diversas giras por Japón, incluyendo presentaciones para la televisión nacional japonesa (NHK). Fue el ganador del proyecto Regards croisés, organizado en 2012 por la compañía francesa Ensemble Justiniana. La música de concierto de Jorge Rodríguez se ha programado en diversos foros de la Ciudad de México, y dentro de festivales en Estados Unidos y Francia. En 2013 concluyó una estancia de estudios en Japón, donde centró su investigación en las formas de transmisión en la música japonesa. Desde 2014 coordina el área de actividades culturales de la Fundación Japón en México.
                 <br>
             </div>
         </div>
