--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                 <p>El Coloquio México-Corea: miradas multidisciplinarias fue el primer evento oficial del Circulo Mexicano de Estudios Coreanos, estuvo co-organizado por el Posgrado de Antropología Social de la ENAH-INAH.</p>
                 <p>El CMEC impartió una conferencia en el marco de la Semana de Asia de la FES Aragón, el 11 de mayo de 2016.</p>
                 <br>
-                <h5>Jorge Raúl Suárez Campero</h5>
+                <h5>Jorge Raúl Suárez Campero (CMEC)</h5>
                 <p>Egresado en Relaciones Internacionales por la Facultad de Ciencias Políticas y Sociales de la UNAM. Asistió a Dankook University en Corea del Sur como becario internacional en el semestre de otoño de 2012. Participó en el Verano de la Investigación Científica de la Academia Mexicana de Ciencias, realizando una estancia de investigación en el Centro de Estudios de Asia y África del Colegio de México. Cursó el Diplomado en Estudios sobre Asia del Seminario Universitario de Estudios Asiáticos de la UNAM. Ha ejercido como profesor adjunto en su institución de origen desde 2013 a la fecha. Ha sido ponente en algunos foros académicos concernientes al continente Asiático. Su área de interés es la política y cultura de la península Coreana.</p>
                 <br>
-                <h5>Lic. Sergio Gallardo García</h5>
+                <h5>Lic. Sergio Gallardo García(CMEC)</h5>
                 <p>Estudiante de maestría en Antropología Social en el Centro de Investigaciones y Estudios Superiores en Antropología Social (CIESAS-DF). Licenciado en sociología por la Facultad de Ciencias Políticas y Sociales de la UNAM. Sus principales temas de investigación son experiencias migratorias en contextos urbanos, inmigración, configuración de ciudades globales, experiencias de extranjeros en la ciudad de México. Ha sido coordinador del área de Investigación del Colectivo Migrantes LGBT. Se ha especializado en el estudio de la comunidad coreana en la ciudad de México, contando con algunas publicaciones: Inmigración coreana en la ciudad de México: ¿conformación de un barrio inmigrante? (2013), Los coreanos en México: Un estudio de integración de la comunidad coreana en la zona rosa de la ciudad de México (2015).</p>
                 <br>
-                <h5>Mtra. Diana Gabriela Poox Martínez</h5>
+                <h5>Mtra. Diana Gabriela Poox Martínez (CMEC)</h5>
                 <p>Licenciada en 2010 por la Universidad Autónoma Metropolitana, Maestra en Antropología Social por la Escuela Nacional de Antropología e Historia en 2014. Ha ejercido como catedrático de la Universidad Privada del Estado de México. Ha participado en diversos foros académicos de instituciones como la UNAM (Universidad Nacional Autónoma de México), ENAH (Escuela Nacional de Antropología e Historia) y UdG (Universidad de Guanajuato). Es miembro del Circulo Mexicano de Estudios Coreanos y de la Red Académica en Migración y Educación. Actualmente es doctorante en Antropología Social por la Escuela Nacional de Antropología e Historia (ENAH/INAH).</p>
                 <br>
                 <br>
