--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                 <div class="col-lg-12">
                     <p></p>
                 </div>
+                <br>
+                <h4>Lic. Balam Israel Cruz Hernández</h4>
+                <p>Licenciado en Relaciones Internacionales por la UNAM. Fue becario en el Centro Nacional de Derechos Humanos en la CNDH. Se desempeñó como ayudante de profesor de asignatura en la Facultad de Ciencias Políticas y Sociales. Ha sido visitador adjunto auxiliar de investigación en la Comisión de Derechos Humanos del Distrito Federal. Ha presentado ponencias en el Conversatorio "Derechos sexuales en espacios públicos", el coloquio "El cierre de un ciclo. Un somero análisis de seis décadas de la República Popular China, 1949-2009" entre otras.</p>
+                <br>
+                <h4>Dra. Ivonne Virginia Campos Rico</h4>
+                <p>Es egresada de la licenciatura en Etnohistoria por la Escuela Nacional de Antropología e Historia (México), y cuenta con Maestría y Doctorado en Estudios de Asia y África (especialidad China) por el Centro de Estudios de Asia y África de El Colegio de México. Entre sus líneas de investigación ha analizado las relaciones interétnicas y la etnicidad durante la dinastía Qing, así como problemáticas político-sociales en el México moderno vinculadas a la presencia china en nuestro país, tales como el antichinismo y la violencia xenofóbica en México, la creación de la Comunidad China de México, A.C. y la historia del barrio chino de la Ciudad de México como espacio de expresión de la identidad china en la ciudad.</p>
                 <h4>Círculo Mexicano de Estudios Coreanos (CMEC)</h4>
                 <p>Es una iniciativa académica de entusiastas jóvenes investigadores de distintas disciplinas. Se formó con el objetivo general de alentar y difundir la producción intelectual, crítica y académica de estudios coreanos en México; buscando siempre la objetividad, horizontalidad y honestidad del conocimiento.</p>
                 <p>Aunque la edad del Círculo es corta, pues este se fundó en 2015, la participación en diversos eventos ha sido activa:</p>
