--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="http://asiaticos.github.io/coloquio/#about">Acerca</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://asiaticos.github.io/coloquio/#mesas">Programa</a> 
+                        <a href="http://asiaticos.github.io/coloquio/#programa">Programa</a> 
                     </li>
                     <!--<li class="page-scroll">
                         <a href="#contact">Contacto</a>
